Fixed textarea overflowing.

--- a/src/elements/styles-elements/ps-styles/ps-styles.scss
+++ b/src/elements/styles-elements/ps-styles/ps-styles.scss
@@ -150,6 +150,10 @@ $ps-scrollbar-y-hover-width: 6px !default;
             }
         }
     }
+
+    .input-container {
+        -ms-overflow-style: auto;
+    }
 }
 
 $ps-theme-default: (
